ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement1/input.ts.stderr
error: Unexpected token `D`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement1/input.ts:5:7
  |
5 | class D {
  |       ^

